buildscript {
    repositories {
        mavenCentral()
        maven { url "https://repo.spring.io/snapshot" }
        maven { url "https://repo.spring.io/milestone" }
        maven { url "https://plugins.gradle.org/m2/" }
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${libSpringBootVersion}")
    }
}

allprojects {
    apply plugin: 'java'
    apply plugin: 'idea'

    group = 'com.lifeinide'
    sourceCompatibility = 1.9

    repositories {
        mavenCentral()
        maven { url "https://repo.spring.io/snapshot" }
        maven { url "https://repo.spring.io/milestone" }
        maven { url "https://dl.bintray.com/commercehub-oss/main" }
        jcenter()
    }

    idea {
        module {
            inheritOutputDirs = true
        }
    }

}

subprojects {
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    dependencies {
        compile("org.springframework.boot:spring-boot-devtools")
        testCompile('org.springframework.boot:spring-boot-starter-test')

        // https://stackoverflow.com/a/46221811/320761: prevents from adding --add-modules java.xml.bind to all VM executions in java 9
        // this is the version currently required by com.sun.jersey:jersey-server:1.19.1, which is used by spring
        compile("javax.xml.bind:jaxb-api:${libJaxbApiVersion}")
        compile("com.sun.xml.bind:jaxb-impl:${libJaxbApiVersion}")

    }

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${libSpringCloudVersion}"
            mavenBom "com.fasterxml.jackson:jackson-bom:${libJacksonVersion}"
        }
    }
}

// for this level do not build anything
jar.enabled = false